Replace Guava's ImmutableList.of with Java 11's List.of
Change-Id: Ie5607ef511311c2ae8ea8b81b9bdd8c204bf8bfc